<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/rL_toolbar"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/back_arrow">

        </ImageView>


        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_14sdp"
            android:text="@string/txt_done">

        </TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_widgets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rL_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/colorBlack"
        android:text="@string/txt_add_widgets">

    </TextView>


    <TextView
        android:id="@+id/tv_widgets_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_widgets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorBlack"
        android:text="@string/txt_add_and_organise_what_you_prefer_doing_most_in_the_application_on_dashboard">

    </TextView>

    <TextView
        android:id="@+id/tv_remove_widgets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_widgets_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAllCaps="true"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorBlack"
        android:text="Remove widgets from dashboard">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_remove_widgets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_remove_widgets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/tv_add_widgets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rv_remove_widgets"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAllCaps="true"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorBlack"
        android:text="Add widgets from dashboard">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add_widgets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_widgets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>